--- a/Docker/challenge/nginx_com_node/docker-compose.yaml
+++ b/Docker/challenge/nginx_com_node/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   database:
     image: mysql
     container_name: database_mysql
-    command: --default-authentication-plugin=mysql_native_password
+    command: --default-authentication-plugin=caching_sha2_password
     restart: always
     volumes:
       - ./mysql:/var/lib/mysql
@@ -23,14 +23,26 @@ services:
       context: .
       dockerfile: node.dockerfile
     container_name: node_app
+    restart: always
     networks:
       - nginx_with_node_challenge
     depends_on:
       database:
         condition: service_healthy
+
+  nginx:
+    image: nginx:latest
+    container_name: reverse_proxy
+    restart: always
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
-      - 3000:3000
-      
+      - "80:80"
+    networks:
+      - nginx_with_node_challenge
+    depends_on:
+      - node_app
+      - database
 
 networks:
   nginx_with_node_challenge:
