--- a/Docker/challenge/nginx_com_node/docker-compose.yaml
+++ b/Docker/challenge/nginx_com_node/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   database:
-    image: mysql
+    image: mysql:8.2.0
     container_name: database_mysql
     command: --default-authentication-plugin=caching_sha2_password
     restart: always
@@ -31,13 +31,13 @@ services:
         condition: service_healthy
 
   nginx:
-    image: nginx:latest
+    image: nginx:1.24.0-bullseye
     container_name: reverse_proxy
     restart: always
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
-      - "80:80"
+      - "8080:80"
     networks:
       - nginx_with_node_challenge
     depends_on:
