--- a/Docker/challenge/nginx_com_node/docker-compose.yaml
+++ b/Docker/challenge/nginx_com_node/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.8"
 
 services:
   database:
@@ -23,7 +23,13 @@ services:
       context: .
       dockerfile: node.dockerfile
     container_name: node_app
+    command: npm start
     restart: always
+    develop:
+      watch:
+        - path: ./node/app.js
+          target: /usr/app/app.js
+          action: rebuild
     networks:
       - nginx_with_node_challenge
     depends_on:
