docker: make compose sync folder and be able to program from host

--- a/Docker/challenge/nginx_com_node/backup1-docker-compose.yaml
+++ b/Docker/challenge/nginx_com_node/backup1-docker-compose.yaml
@@ -27,11 +27,9 @@ services:
     restart: always
     develop:
       watch:
-        - path: ./node
-          target: /usr/src/app
-          action: sync
-          ignore:
-            - node_modules/
+        - path: ./node/app.js
+          target: /usr/app/app.js
+          action: rebuild
     networks:
       - nginx_with_node_challenge
     depends_on:
